Extract gradle duuplicates stuff to plugins

--- a/event/build.gradle
+++ b/event/build.gradle
@@ -1,15 +1,7 @@
 plugins {
-    id 'java'
-}
-
-group = project.property('root.group')
-version = project.property('root.version')
-sourceCompatibility = project.property('root.java.source')
-targetCompatibility = project.property('root.java.target')
-
-repositories {
-    mavenLocal()
-    mavenCentral()
+    id 'org.pacific.engine.repository'
+    id 'org.pacific.engine.java'
+    id 'org.pacific.engine.pom'
 }
 
 dependencies {
@@ -18,13 +10,4 @@ dependencies {
     implementation project(':identity')
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_version}"
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-}
-
-jar {
-    archiveBaseName = "${project.name}"
-    archiveVersion = "${project.version}"
-}
-
-test {
-    useJUnitPlatform()
 }
