--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,15 @@
-root.group=org.pacific.engine.simple
-root.name=PacificEngine
-root.version=0.0.0-SNAPSHOT
-root.java.source=1.8
-root.java.target=1.8
+project.group=org.pacific.engine.simple
+project.name.short=PacificEngine
+project.name.full=Pacific Engine
+project.description=Just a simple set of projects
+project.version=0.0.0-SNAPSHOT
+
+project.dev.id=salomj
+project.dev.name=Joseph Salomone
+project.dev.url=https://github.com/salomj
+
+java.source=1.8
+java.target=1.8
+
+git.repo.url=https://github.com/PacificEngine/simple
+git.repo.address=github.com:PacificEngine/simple.git
