properties per a module

--- a/event/gradle.properties
+++ b/event/gradle.properties
@@ -1,3 +1,3 @@
-project.name.short=identity
-project.name.full=Pacific Engine Identity
-project.description=Some useful stuff of identifying objects
+project.name.short=event
+project.name.full=Pacific Engine Events
+project.description=Useful for subscription base model programming
