--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,16 @@
 project.group=org.pacific.engine.simple
-project.name.short=PacificEngine
-project.name.full=Pacific Engine
-project.description=Just a simple set of projects
 project.version=0.0.0-SNAPSHOT
-
 project.dev.id=salomj
 project.dev.name=Joseph Salomone
 project.dev.url=https://github.com/salomj
+
+project.name.short=PacificEngine
+project.name.full=Pacific Engine
+project.description=Just a simple set of projects
+
+root.name.short=PacificEngine
+root.name.full=Pacific Engine
+root.description=Just a simple set of projects
 
 java.source=1.8
 java.target=1.8
