--- a/buildSrc/gradle.properties
+++ b/buildSrc/gradle.properties
@@ -1,3 +1,3 @@
-project.name.short=event
-project.name.full=Pacific Engine Events
-project.description=Useful for subscription base model programming
+project.name.short=buildSrc
+project.name.full=Pacific Engine Gradle Build Sourcing
+project.description=Useful for extracting out dupicate build code
