--- a/identity/gradle.properties
+++ b/identity/gradle.properties
@@ -1,3 +1,3 @@
-project.name.short=property
-project.name.full=Property
-project.description=A list of properties
+project.name.short=identity
+project.name.full=Pacific Engine Identity
+project.description=Some useful stuff of identifying objects
