--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,40 @@ os: linux
 dist: trusty
 jdk: oraclejdk8
 
-script:
-  - ./gradlew clean build pom test --scan -s
+#https://docs.travis-ci.com/user/environment-variables/
+env:
+  jobs:
+
+#https://stackoverflow.com/questions/54448685/travis-ci-how-to-conditionally-run-provider-deployment-jobs
+jobs:
+  include:
+    #https://docs.travis-ci.com/user/build-stages/
+    - stage: development
+        if: branch != main
+        script:
+          - ./gradlew clean build pom test --scan -s --warning-mode all
+    - stage: release
+        if: branch = main
+        script:
+        #https://blogs.itemis.com/en/secure-your-travis-ci-releases-part-2-signature-with-openpgp
+          - ./gradlew clean build pom test --scan -s --warning-mode all
+        #https://docs.travis-ci.com/user/deployment/releases/
+        #before_deploy:
+          # Set up git user name and tag this commit
+        #  - git config --local user.name "YOUR GIT USER NAME"
+        #  - git config --local user.email "YOUR GIT USER EMAIL"
+        #  - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+        #  - git tag $TRAVIS_TAG
+        #deploy:
+        #  provider: releases
+        #  api_key:
+            #https://docs.travis-ci.com/user/encryption-keys/
+        #    secure: YOUR_API_KEY_ENCRYPTED
+        #  file_glob: true
+        #  file:
+        #    - "**/build/libs/*.jar"
+        #    - "**/build/pom.xml"
+        #  skip_cleanup: true
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
