--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,14 @@ plugins {
 }
 
 ext {
+    isReleaseVersion = !version.endsWith("SNAPSHOT")
     junit_version = '5.6.0'
     lombok_version = '1.18.18'
+}
+
+if (hasProperty('buildScan')) {
+    buildScan {
+        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+        termsOfServiceAgree = 'yes'
+    }
 }
