--- a/identity/build.gradle
+++ b/identity/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 dependencies {
-    compileOnly "org.projectlombok:lombok:${lombok_version}"
-    annotationProcessor "org.projectlombok:lombok:${lombok_version}"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_version}"
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    compileOnly         group: 'org.projectlombok', name: 'lombok', version: "${lombok_version}"
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${lombok_version}"
+    testImplementation  group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${junit_version}"
+    testRuntimeOnly     group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${junit_version}"
 }
