--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-project.group=org.pacific.engine.simple
+project.group=com.github.pacificengine.simple
 project.version=0.0.0-SNAPSHOT
 project.dev.id=salomj
 project.dev.name=Joseph Salomone
